src/test/06-Errors/error-return-not-all-4.txt
error-return-not-all-4.ck:9:16: error: not all control paths in 'fun Foo Foo.make( int c[], int t[] )' return a value
[9]     fun static Foo make( int c[], int t[])
                   ^
